# pyIRR2PAR

./: .gitignore  README.md  pyproject.toml
LICENSES/: LICENSE_pyGAM
example/: 1902685-lovuse023-cycle12-out.csv  1902685-lovuse023b-cycle12.csv
pyIRR2PAR/: IRR2PAR.py  JPitarch_Ed_380_443_490_555.py  JTan2025_Ed_380_443_490_555.py  __init__.py  setup.py
