[project]
name = "pyIRR2PAR"
authors = [{ name = "Edouard Leymarie", email = "edouard.leymarie@imev-mer.fr"}]
#maintainers = [{ name = "", email = ""}]
description = "Calculation of PAR from multispectral irradiance profiles according to Argo recommendations"
keywords = [ "argo-floats", "argo-bgc", "argo-data", "radiometry", "irradiance", "photosynthetically-available-radiation", "argo-par"]
license = "EUPL-1.2"
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["numpy>=2.4", "scipy>=1.16"]
license-files = [
    "LICENSE",
    "LICENSES/*",
]

[project.urls]
homepage = "https://github.com/euroargodev/pyIRR2PAR"
issue-tracker = "https://github.com/euroargodev/pyIRR2PAR/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools-scm>=8", "wheel"]

[tool.setuptools]
packages = ["pyIRR2PAR"]

[tool.setuptools_scm]
fallback_version = "9999"
